# RAGume

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tmp_t.db-shm  tmp_t.db-wal  tmp_test.db-shm  tmp_test.db-wal
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/services/: auth.py  benchmarking.py  bm25_index.py  chunking.py  claim_admission.py  claim_extractor.py  claim_utils.py  company_research.py  context_assembler.py  correction_resolver.py  docling_resume_parser.py  documents.py  embeddings.py  evidence_fusion.py  gliner_ner.py  job_descriptions.py  parser_backends.py  parsing.py  pdf_layout.py  profile_compiler.py  profile_graph.py  profile_memory.py  profile_studio.py  profiles.py  query_manager.py  record_assembler.py  reranker.py  resume_generator.py  resume_parser.py  retrieval.py  wiki.py
app/static/: app.js  benchmarks.html  index.html  job.html  login.html  profile.html  profiles.html  register.html  resume.html  styles.css  wiki.html
data/: app.db-shm
data/benchmark-reports/: benchmark-20260517T193727Z-auto.json
deploy/cloudflared/: ragume.example.yml
deploy/systemd/: rag-resume-customizer.service.template  ragume-cloudflared.service.template
rag_resume_customizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: compare_resume_parsers.py  install_user_service.sh  openresume_bridge.ts  run_prod.sh
tests/: test_benchmarking.py  test_claim_admission_and_compiler.py  test_correction_resolver.py  test_evidence_fusion.py  test_mvp1_flow.py  test_record_assembler.py  test_runtime_production.py
