[project]
name = "rag-resume-customizer"
version = "0.1.0"
description = "MVP1 profile claim engine for evidence-backed resume generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "huggingface-hub>=0.33.0,<1.0.0",
  "numpy>=2.1.0,<3.0.0",
  "openai>=1.30.0,<2.0.0",
  "onnxruntime>=1.22.0,<2.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "PyMuPDF>=1.25.0,<2.0.0",
  "pypdf>=4.2.0,<6.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "transformers>=4.53.0,<5.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*", "static/**/*"]
